...
-->
<resources>
    <string name="app_name" translatable="false">Rocket.Chat</string>

    <!-- Titles -->
    <string name="title_sign_in_your_server">Sign in to your server</string>
    <string name="title_log_in">Login</string>
    <string name="title_register_username">Register username</string>
    <string name="title_reset_password">Reset password</string>
    <string name="title_sign_up">Sign up</string>
    <string name="title_authentication">Authentication</string>
    <string name="title_legal_terms">Legal Terms</string>
    <string name="title_chats">Chats</string>
    <string name="title_profile">Profile</string>
    <string name="title_members">Members</string>
    <string name="title_counted_members">Members (%d)</string>
...
    <string name="action_view_profile_photo">View profile photo</string>
    <string name="action_take_a_photo">Take a photo</string>
    <string name="action_reset_avatar">Reset avatar</string>
    <string name="action_connect_server">Connect with a server</string>
    <string name="action_join_community">Join in the community</string>
    <string name="action_create_server">Create a new server</string>
    <string name="action_register">Register</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_remove_favorite">Remove favorite</string>

    <!-- Settings messages -->
    <string name="msg_contact_us">Contact us</string>
...
    <string name="msg_invalid_session" translatable="false">Your session is invalid. Please sign in again.</string> <!-- TODO Make translatable and add translations -->
    <string name="msg_no_data_to_display">No data to display</string>
    <string name="msg_check_this_out">Check this out</string>
    <string name="msg_share_using">Share using</string>
    <string name="msg_dynamic_link_description" translatable="false">Chat with %1$s on %2$s</string> <!-- TODO Make translatable and add translations -->
    <string name="msg_profile_updated_successfully">Profile updated successfully</string>
    <string name="msg_username">Username</string>
    <string name="msg_profile_username_hint" translatable="false">Please enter your username</string> <!-- TODO Make translatable and add translations -->
    <string name="msg_username_or_email">Username or email</string>
    <string name="msg_password">Password</string>
    <string name="msg_name">Name</string>
    <string name="msg_profile_name_hint" translatable="false">Please enter your name…</string>
    <string name="msg_email">Email</string>
    <string name="msg_profile_email_hint" translatable="false">Please enter your email address</string> <!-- TODO Make translatable and add translations -->
    <string name="msg_avatar_url">avatar URL</string>
    <string name="msg_or_continue_using_social_accounts">Or continue using social accounts</string>
    <string name="msg_new_user">New user? %1$s</string>
    <string name="msg_forgot_your_password">Forgot your password?</string>
    <string name="msg_reset">Reset</string>
    <string name="msg_check_your_email_to_reset_your_password">Email sent! Check your inbox to reset your password.</string>
    <string name="msg_invalid_email">Please type a valid e-mail</string>
    <string name="msg_new_user_agreement">By proceeding you are agreeing to our\n%1$s and %2$s</string>
    <string name="msg_more_than_ninety_nine_unread_messages" translatable="false">99+</string>
    <string name="msg_yesterday">Yesterday</string>
...
